removed highlight and change footer color

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ ol {
 
 footer {
     text-align: center;
-    background-color: sandybrown;
+    background-color: rgb(9, 183, 41);
     padding: .6em;
     margin-top: 10px;
 }
